@@ -10,50 +10,50 @@
 -- Dumping data for table `configuration`
 --
 
-INSERT INTO `configuration` (`name`, `value`, `type`, `description`) VALUES
-('clar_answers', '["No comment","Read the problem statement carefully"]', 'array_val', 'List of predefined clarification answers'),
-('clar_categories', '{"general":"General issue","tech":"Technical issue"}', 'array_keyval', 'List of additional clarification categories'),
-('script_timelimit', '60', 'int', 'Maximum seconds available for compile/compare scripts. This is a safeguard against malicious code and buggy scripts, so a reasonable but large amount should do.'),
-('script_memory_limit', '2097152', 'int', 'Maximum memory usage (in kB) by compile/compare scripts. This is a safeguard against malicious code and buggy script, so a reasonable but large amount should do.'),
-('script_filesize_limit', '540672', 'int', 'Maximum filesize (in kB) compile/compare scripts may write. Submission will fail with compiler-error when trying to write more, so this should be greater than any *intermediate or final* result written by compilers.'),
-('memory_limit', '524288', 'int', 'Maximum memory usage (in kB) by submissions. This includes the shell which starts the compiled solution and also any interpreter like the Java VM, which takes away approx. 300MB! Can be overridden per problem.'),
-('output_limit', '4096', 'int', 'Maximum output (in kB) submissions may generate. Any excessive output is truncated, so this should be greater than the maximum testdata output.'),
-('process_limit', '64', 'int', 'Maximum number of processes that the submission is allowed to start (including shell and possibly interpreters).'),
-('sourcesize_limit', '256', 'int', 'Maximum source code size (in kB) of a submission. This setting should be kept in sync with that in "etc/submit-config.h.in".'),
-('sourcefiles_limit', '100', 'int', 'Maximum number of source files in one submission. Set to one to disable multiple file submissions.'),
-('timelimit_overshoot', '"1s|10%"', 'string', 'Time that submissions are kept running beyond timelimt before being killed. Specify as "Xs" for X seconds, "Y%" as percentage, or a combination of both separated by one of "+|&" for the sum, maximum, or minimum of both.'),
-('output_storage_limit', '50000', 'int', 'Maximum size of error/system output stored in the database (in bytes); use "-1" to disable any limits.'),
-('output_display_limit', '2000', 'int', 'Maximum size of run/diff/error/system output shown in the jury interface (in bytes); use "-1" to disable any limits.'),
-('verification_required', '0', 'bool', 'Is verification of judgings by jury required before publication?'),
-('score_in_seconds', '0', 'bool', 'Should the scoreboard resolution be measured in seconds instead of minutes?'),
-('show_flags', '0', 'bool', 'Show country flags on the scoreboard?'),
-('show_affiliations', '1', 'bool', 'Show affiliation names on the scoreboard?'),
-('show_affiliation_logos', '1', 'bool', 'Show affiliation logos on the scoreboard?'),
-('show_pending', '1', 'bool', 'Show pending submissions on the scoreboard?'),
-('show_teams_submissions', '1', 'bool', 'Show problem columns with submission information on the public and team scoreboards?'),
-('show_compile', '2', 'int', 'Show compile output in team webinterface? Choices: 0 = never, 1 = only on compilation error(s), 2 = always.'),
-('show_sample_output', '0', 'bool', 'Should teams be able to view a diff of their and the reference output to sample testcases?'),
-('show_balloons_postfreeze', '0', 'bool', 'Give out balloon notifications after the scoreboard has been frozen?'),
-('penalty_time', '20', 'int', 'Penalty time in minutes per wrong submission (if finally solved).'),
-('compile_penalty', '0', 'bool', 'Should submissions with compiler-error incur penalty time (and show on the scoreboard)?'),
-('results_prio', '{"memory-limit":99,"output-limit":99,"run-error":99,"timelimit":99,"wrong-answer":99,"no-output":99,"correct":1}', 'array_keyval', 'Priorities of results for determining final result with multiple testcases. Higher priority is used first as final result. With equal priority, the first occurring result determines the final result.'),
-('results_remap', '{}', 'array_keyval', 'Remap testcase result, e.g. to disable a specific result type such as ''no-output''.'),
-('lazy_eval_results', '0', 'bool', 'Lazy evaluation of results? If enabled, stops judging as soon as a highest priority result is found, otherwise always all testcases will be judged.'),
-('enable_printing', '0', 'bool', 'Enable teams and jury to send source code to a printer via the DOMjudge web interface.'),
-('time_format', '"%H:%M"', 'string', 'The format used to print times. For formatting options see the PHP \'strftime\' function.'),
-('default_compare', '"compare"', 'string', 'The script used to compare outputs if no special compare script specified.'),
-('default_run', '"run"', 'string', 'The script used to run submissions if no special run script specified.'),
-('allow_registration', '0', 'bool', 'Allow users to register themselves with the system?'),
-('allow_openid_auth', '0', 'bool', 'Allow users to log in using OpenID'),
-('openid_autocreate_team', '1', 'bool', 'Create a team for each user that logs in with OpenID'),
-('openid_provider', '"https://accounts.google.com"', 'string', 'OpenID Provider URL'),
-('openid_clientid', '""', 'string', 'OpenID Connect client id'),
-('openid_clientsecret', '""', 'string', 'OpenID Connect client secret'),
-('judgehost_warning', '30', 'int', 'Time in seconds after a judgehost last checked in before showing its status as "warning".'),
-('judgehost_critical', '120', 'int', 'Time in seconds after a judgehost last checked in before showing its status as "critical".'),
-('thumbnail_size', '128', 'int', 'Maximum width/height of a thumbnail for uploaded testcase images.'),
-('diskspace_error', '1048576', 'int', 'Minimum free disk space (in kB) on judgehosts.'),
-('require_entry_point', '0', 'bool', 'Require entry point for submissions.');
+INSERT INTO `configuration` (`name`, `value`, `type`, `public`, `description`) VALUES
+('clar_answers', '["No comment","Read the problem statement carefully"]', 'array_val', '1', 'List of predefined clarification answers'),
+('clar_categories', '{"general":"General issue","tech":"Technical issue"}', 'array_keyval', '1', 'List of additional clarification categories'),
+('script_timelimit', '60', 'int', '0', 'Maximum seconds available for compile/compare scripts. This is a safeguard against malicious code and buggy scripts, so a reasonable but large amount should do.'),
+('script_memory_limit', '2097152', 'int', '0', 'Maximum memory usage (in kB) by compile/compare scripts. This is a safeguard against malicious code and buggy script, so a reasonable but large amount should do.'),
+('script_filesize_limit', '540672', 'int', '0', 'Maximum filesize (in kB) compile/compare scripts may write. Submission will fail with compiler-error when trying to write more, so this should be greater than any *intermediate or final* result written by compilers.'),
+('memory_limit', '524288', 'int', '0', 'Maximum memory usage (in kB) by submissions. This includes the shell which starts the compiled solution and also any interpreter like the Java VM, which takes away approx. 300MB! Can be overridden per problem.'),
+('output_limit', '4096', 'int', '0', 'Maximum output (in kB) submissions may generate. Any excessive output is truncated, so this should be greater than the maximum testdata output.'),
+('process_limit', '64', 'int', '0', 'Maximum number of processes that the submission is allowed to start (including shell and possibly interpreters).'),
+('sourcesize_limit', '256', 'int', '1', 'Maximum source code size (in kB) of a submission. This setting should be kept in sync with that in "etc/submit-config.h.in".'),
+('sourcefiles_limit', '100', 'int', '1', 'Maximum number of source files in one submission. Set to one to disable multiple file submissions.'),
+('timelimit_overshoot', '"1s|10%"', '0', 'string', 'Time that submissions are kept running beyond timelimt before being killed. Specify as "Xs" for X seconds, "Y%" as percentage, or a combination of both separated by one of "+|&" for the sum, maximum, or minimum of both.'),
+('output_storage_limit', '50000', 'int', '0', 'Maximum size of error/system output stored in the database (in bytes); use "-1" to disable any limits.'),
+('output_display_limit', '2000', 'int', '0', 'Maximum size of run/diff/error/system output shown in the jury interface (in bytes); use "-1" to disable any limits.'),
+('verification_required', '0', 'bool', '0', 'Is verification of judgings by jury required before publication?'),
+('score_in_seconds', '0', 'bool', '1', 'Should the scoreboard resolution be measured in seconds instead of minutes?'),
+('show_flags', '0', 'bool', '1', 'Show country flags on the scoreboard?'),
+('show_affiliations', '1', 'bool', '1', 'Show affiliation names on the scoreboard?'),
+('show_affiliation_logos', '1', 'bool', '1', 'Show affiliation logos on the scoreboard?'),
+('show_pending', '1', 'bool', '1', 'Show pending submissions on the scoreboard?'),
+('show_teams_submissions', '1', 'bool', '1', 'Show problem columns with submission information on the public and team scoreboards?'),
+('show_compile', '2', 'int', '1', 'Show compile output in team webinterface? Choices: 0 = never, 1 = only on compilation error(s), 2 = always.'),
+('show_sample_output', '0', 'bool', '1', 'Should teams be able to view a diff of their and the reference output to sample testcases?'),
+('show_balloons_postfreeze', '0', 'bool', '1', 'Give out balloon notifications after the scoreboard has been frozen?'),
+('penalty_time', '20', 'int', '1', 'Penalty time in minutes per wrong submission (if finally solved).'),
+('compile_penalty', '0', 'bool', '1', 'Should submissions with compiler-error incur penalty time (and show on the scoreboard)?'),
+('results_prio', '{"memory-limit":99,"output-limit":99,"run-error":99,"timelimit":99,"wrong-answer":99,"no-output":99,"correct":1}', 'array_keyval', '0', 'Priorities of results for determining final result with multiple testcases. Higher priority is used first as final result. With equal priority, the first occurring result determines the final result.'),
+('results_remap', '{}', 'array_keyval', '0', 'Remap testcase result, e.g. to disable a specific result type such as ''no-output''.'),
+('lazy_eval_results', '0', 'bool', '0', 'Lazy evaluation of results? If enabled, stops judging as soon as a highest priority result is found, otherwise always all testcases will be judged.'),
+('enable_printing', '0', 'bool', '1', 'Enable teams and jury to send source code to a printer via the DOMjudge web interface.'),
+('time_format', '"%H:%M"', 'string', '0', 'The format used to print times. For formatting options see the PHP \'strftime\' function.'),
+('default_compare', '"compare"', 'string', '0', 'The script used to compare outputs if no special compare script specified.'),
+('default_run', '"run"', 'string', '0', 'The script used to run submissions if no special run script specified.'),
+('allow_registration', '0', 'bool', '1', 'Allow users to register themselves with the system?'),
+('allow_openid_auth', '0', 'bool', '1', 'Allow users to log in using OpenID'),
+('openid_autocreate_team', '1', 'bool', '1', 'Create a team for each user that logs in with OpenID'),
+('openid_provider', '"https://accounts.google.com"', 'string', '1', 'OpenID Provider URL'),
+('openid_clientid', '""', 'string',  '0','OpenID Connect client id'),
+('openid_clientsecret', '""', 'string', '0', 'OpenID Connect client secret'),
+('judgehost_warning', '30', 'int', '0', 'Time in seconds after a judgehost last checked in before showing its status as "warning".'),
+('judgehost_critical', '120', 'int', '0', 'Time in seconds after a judgehost last checked in before showing its status as "critical".'),
+('thumbnail_size', '128', 'int', '0', 'Maximum width/height of a thumbnail for uploaded testcase images.'),
+('diskspace_error', '1048576', 'int', '0', 'Minimum free disk space (in kB) on judgehosts.'),
+('require_entry_point', '0', 'bool', '1', 'Require entry point for submissions.');
 
 --
 -- Dumping data for table `executable`
